test_regress/t/t_pp_circdef_bad.out
%Error: t/t_pp_circdef_bad.v:13: Recursive `define or other nested inclusion
%Error: t/t_pp_circdef_bad.v:14: syntax error, unexpected $end, expecting TYPE-IDENTIFIER
%Error: Exiting due to
